Created basic compiler & updated all other modules

--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -9,5 +9,6 @@ path = "src/lib.rs"
 
 [dependencies]
 gneurshk_parser = { path = "../parser" }
+gneurshk_lexer = { path = "../lexer" }
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"] }
