Added basic type checking

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 gneurshk_compiler = { path = "../compiler" }
+gneurshk_analyzer = { path = "../analyzer" }
 gneurshk_parser = { path = "../parser" }
 gneurshk_lexer = { path = "../lexer" }
 
