--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["lexer", "parser", "cli", "compiler"]
+members = ["lexer", "parser", "cli", "compiler", "analyzer"]
