Added annotations and updated analyzer
- Added custom analyzer errors
- Updated check command
- Updated spell check extension words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "clearscreen",
         "gneurshk",
-        "indicatif"
+        "indicatif",
+        "thiserror"
     ]
 }
